--- a/robot_ws/src/jetbot_base/package.xml
+++ b/robot_ws/src/jetbot_base/package.xml
@@ -11,9 +11,10 @@
   <author>Jeremy Wallace</author>
   <author email="jeremygw@amazon.com">Jeremy Wallace</author>
 
-  <exec_depend>example_interfaces</exec_depend>
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
     
   <export>
     <build_type>ament_python</build_type>
